# sicret

./: Makefile  README.md  pyproject.toml
sicret/: __init__.py  config.py  utils.py
sicret/chat/: __init__.py  client.py  server.py
sicret/cli/: chat.py  key.py  main.py  ui.py
sicret/crypto/: key.py  keyutils.py
sicret/db/: connection.py  migrator.py
tests/: test.py
