[tool.poetry]
name = "sicret"
version = "0.1.2"
description = "What happens in secret, stays in sicret."
authors = ["Rafael Izidoro <izidoro.rafa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.7"
websockets = "^12.0"
textual = "^0.46.0"
rich = "^13.7.0"
typer = "^0.9.0"
records = "^0.5.3"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
python-socketio = {extras = ["client"], version = "^5.10.0"}
eventlet = "^0.34.2"
aiohttp = "^3.9.1"
aioconsole = "^0.7.0"
pip = "^23.3.2"
install = "^1.3.5"
textual-dev = "^1.3.0"
urwid = "^2.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.1"
flake8 = "^6.1.0"
ipython = "^8.19.0"

[tool.poetry.scripts]
sicret = 'sicret.cli.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
